--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,11 @@
     -->
     <title>MikeRates</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
+    <meta name="description" content="Customizable and installable cycle-time calculator" />
   </head>
   <body>
-    <noscript>Please enable JavaScript to use this app.</noscript>
+    <noscript>Please enable JavaScript to use MikeRates.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
