--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,8 @@
     <title>MikeRates</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600&display=swap" rel="stylesheet">
-    <meta name="description" content="Customizable and installable cycle-time calculator" />
+    <meta name="description" content="Customizable and installable cycle-time calculator web app" />
+    <meta name="robots" content="index">
   </head>
   <body>
     <noscript>Please enable JavaScript to use MikeRates.</noscript>
